--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
   "author": "George Martin Jose",
   "license": "ISC",
   "dependencies": {
+    "aws-sdk": "^2.1033.0",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.0.12"
+    "mongoose": "^6.0.12",
+    "multer": "^1.4.3",
+    "multer-s3": "^2.10.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.13"
