--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "mongoose": "^6.0.12",
     "multer": "^1.4.3",
     "multer-s3": "^2.10.0",
-    "razorpay": "^2.8.0"
+    "razorpay": "^2.8.0",
+    "short-unique-id": "^4.4.4"
   },
   "devDependencies": {
     "nodemon": "^2.0.13"
