--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.12",
+    "morgan": "^1.10.0",
     "multer": "^1.4.3",
     "multer-s3": "^2.10.0",
     "razorpay": "^2.8.0",
