--- a/package.json
+++ b/package.json
@@ -5,12 +5,14 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "dev": "nodemon index.js"
+    "dev": "nodemon index.js",
+    "deploy": "serverless deploy"
   },
   "author": "George Martin Jose",
   "license": "ISC",
   "dependencies": {
     "aws-sdk": "^2.1033.0",
+    "aws-serverless-express": "^3.4.0",
     "axios": "^0.24.0",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
@@ -22,6 +24,7 @@
     "multer": "^1.4.3",
     "multer-s3": "^2.10.0",
     "razorpay": "^2.8.0",
+    "serverless": "^3.17.0",
     "short-unique-id": "^4.4.4"
   },
   "devDependencies": {
