--- a/serverless.yml
+++ b/serverless.yml
@@ -3,14 +3,14 @@ service: expressInAWSDemo #Name of your App
 provider:
   name: aws
   runtime: nodejs14.x # Node JS version
-  memorySize: 512
-  timeout: 15
+  memorySize: 128
+  timeout: 10
   stage: production
   region: ap-south-1 # AWS region
 
 functions:
   api:
-    handler: lambda.handler
+    handler: lambda.universal
     events:
       - http:
           path: /
