--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.3",
     "multer-s3": "^2.10.0",
+    "multer-sharp-s3": "^0.2.5",
     "razorpay": "^2.8.0",
     "short-unique-id": "^4.4.4"
   },
